[package]
name = "terrashine"
version = "0.1.0"
edition = "2021"
author = "Isawan Millican"
about = "Terraform mirroring proxy"

[[test]]
name = "integration"
path = "integration/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "^1.0.79"
aws-sdk-s3 = { version = "^1.15.0" }
axum = { version = "^0.7.4", features = ["http2", "json", "tracing"] }
clap = { version = "^4.5.0", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
http = "^1.0.0"
hyper = { version = "^1.1.0", features = ["full"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.24", default-features = false, features = [
    "rustls-tls-manual-roots",
    "gzip",
    "deflate",
    "brotli",
    "stream",
] }
serde = { version = "^1.0.196", features = ["serde_derive"] }
serde_json = "^1.0.113"
thiserror = "^1.0.57"
tower = "^0.4.13"
tower-http = { version = "^0.5.0", features = [
    "tracing",
    "trace",
    "metrics",
    "util",
] }
tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.18", features = [
    "env-filter",
    "json",
    "tracing-log",
] }
url = { version = "^2.5.0", features = ["serde"] }
tokio = { version = "^1.36.0", features = ["full"] }
sqlx = { version = "^0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
tokio-stream = "^0.1.14"
aws-config = { version = "^1.1.5" }
futures = "0.3.30"
humantime = "2.1.0"
tokio-test = "0.4.3"
tokio-util = "0.7.10"
axum-prometheus = "0.5.0"
async-trait = "0.1.74"
hyper-util = { version = "0.1.1", features = [
    "http1",
    "http2",
    "server",
    "server-auto",
] }
rustls-native-certs = "0.7.0"

[dev-dependencies]
axum-macros = "0.4.0"
tempfile = "3.10.0"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }

[build]
rustflags = ["--cfg", "tokio_unstable"]
target = "x86_64-unknown-linux-musl"

[profile.release]
debug = 1
lto = "thin"
