[package]
name = "terrashine"
version = "0.1.0"
edition = "2021"
author = "Isawan Millican"
about = "Terraform mirroring proxy"

[[test]]
name = "integration"
path = "integration/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "^1.0.82"
aws-sdk-s3 = { version = "^1.25.0" }
axum = { version = "^0.8.0", features = ["json", "tracing"] }
clap = { version = "^4.5.4", features = [
	"derive",
	"env",
	"unicode",
	"wrap_help",
] }
http = "^1.1.0"
hyper = { version = "^1.3.1", features = ["full"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", default-features = false, features = [
	"rustls-tls-manual-roots",
	"gzip",
	"deflate",
	"brotli",
	"stream",
	"socks",
] }
serde = { version = "^1.0.200", features = ["serde_derive"] }
serde_json = "^1.0.116"
thiserror = "^2.0.0"
tower = "^0.5.0"
tower-http = { version = "^0.6.0", features = [
	"tracing",
	"trace",
	"metrics",
	"util",
] }
tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.18", features = [
	"env-filter",
	"json",
	"tracing-log",
] }
url = { version = "^2.5.0", features = ["serde"] }
tokio = { version = "^1.37.0", features = ["full"] }
sqlx = { version = "^0.8.0", features = [
	"runtime-tokio",
	"tls-rustls",
	"postgres",
] }
tokio-stream = "^0.1.15"
aws-config = { version = "^1.3.0" }
futures = "0.3.30"
humantime = "2.1.0"
tokio-test = "0.4.4"
tokio-util = "0.7.10"
axum-prometheus = "0.8.0"
hyper-util = { version = "0.1.1", features = [
	"http1",
	"http2",
	"server",
	"server-auto",
] }
rustls-native-certs = "0.8.0"
jemallocator = "0.5.4"

[dev-dependencies]
axum-macros = "0.5.0"
tempfile = "3.10.1"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }


[profile.release]
debug = 1
lto = "thin"
